--- a/LITReview/reviews/templates/reviews/create_review.html
+++ b/LITReview/reviews/templates/reviews/create_review.html
@@ -20,7 +20,7 @@
         </p>
             {{ review_form.as_p }}
             {% csrf_token %}
-            <div class="posting-button">
+            <div class="bloc__post">
                 <button type="submit">Publier</button>
             </div>
     </form>
