--- a/LITReview/reviews/templates/reviews/edit_review.html
+++ b/LITReview/reviews/templates/reviews/edit_review.html
@@ -4,7 +4,7 @@
     <form class="posting-form" method="post" enctype="multipart/form-data">
                 {{ edit_form.as_p }}
                 {% csrf_token %}
-            <div class="posting-button">
+            <div class="bloc__post">
                 <button type="submit">Sauvegarder</button>
             </div>
     </form>
