--- a/LITReview/authentication/templates/authentication/login.html
+++ b/LITReview/authentication/templates/authentication/login.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'login.css' %}">
+    <link rel="stylesheet" href="{% static '/css/main.css' %}">
     <title>LITReview</title>
 </head>
-<body>
-    <div class="container">
+<body id="login-body">
+    <div class="login-container">
         <div class="logo">
             <img src="{% static '/img/logo.png' %}" alt="">
         </div>
         <div class="content">
             <div class="register">
                 <p>je m'inscris maintenant</p>
-                <a class="bouton" href="{% url 'signup' %}">S'inscrire</a>
+                <a class="action-button" href="{% url 'signup' %}">S'inscrire</a>
             </div>
             <div class="login">
                 <p>Je me connecte...</p>
@@ -23,7 +23,7 @@
                     <input type="text" name="username" placeholder="Nom utilisateur" maxlength="63" required="" id="id_username">
                     <input type="password" name="password" placeholder="Mot de passe" maxlength="63" required="" id="id_password">
                     {% csrf_token %}
-                    <button type="submit" >Se connecter</button>
+                    <button class="action-button" type="submit" >Se connecter</button>
                 </form>
             </div>
 
