--- a/LITReview/reviews/templates/reviews/create_ticket.html
+++ b/LITReview/reviews/templates/reviews/create_ticket.html
@@ -21,7 +21,7 @@
 
         </p>
             {% csrf_token %}
-            <div class="posting-button">
+            <div class="bloc__post">
                 <button type="submit">Publier</button>
             </div>
 </form>
