--- a/LITReview/reviews/templates/reviews/edit_ticket.html
+++ b/LITReview/reviews/templates/reviews/edit_ticket.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
+
 {% block content %}
     <h2>Modifier le ticket</h2>
-    <form method="post">
+    <form class="posting-form" method="post" enctype="multipart/form-data">
+
         <p>{{ edit_form.edit_ticket }}</p>
         <p>
             <label for="{{ edit_form.title.label }}">Titre&nbsp;:</label>
@@ -12,19 +14,25 @@
             <label for="{{ edit_form.description.label }}">Description&nbsp;:</label>
             <br>
             {{ edit_form.description}}
+
         </p>
-        <p>
-            <label for="{{ edit_form.image.label }}">Image&nbsp;:</label>
+        <div class="bloc__cover">
+            <img src="{{ ticket.image.url }}" alt="">
             <br>
-            {{ edit_form.image}}
+            
+        </div>
+        <p>
+            <label for="id_{{ edit_form.image.name }}" class="btn btn--edit btn--width">Télécharger</label>
+            {{ edit_form.image }}
         </p>
         {% csrf_token %}
-        <button type="submit">Sauvegarder</button>
+
+        <div class="bloc__post">
+
+            <button  type="submit">Sauvegarder</button>
+        </div>
+        
     </form>
-    <form method="post">
-        {{ delete_form }}
-        {% csrf_token %}
-        <button type="submit">Supprimer</button>
-    </form>
+   
 
 {% endblock content %}
