--- a/LITReview/reviews/templates/reviews/feed.html
+++ b/LITReview/reviews/templates/reviews/feed.html
@@ -4,9 +4,9 @@
 
 
 {% block content %}
-    <div class="make_button">
-        <a href="{% url 'create_ticket' %}">Demander une critique</a>
-        <a href="{% url 'create_review' %}">Créer une critique</a>
+    <div class="create-button-box">
+        <a class="create-button-link" href="{% url 'create_ticket' %}">Demander une critique</a>
+        <a class="create-button-link" href="{% url 'create_review' %}">Créer une critique</a>
     </div>
 
     {% for instance in page_obj %}
@@ -15,9 +15,9 @@
                 {% include 'reviews/partials/review_snippet.html' with review=instance %}
             {% elif instance|model_type == 'Ticket' %}
                 {% include 'reviews/partials/ticket_snippet.html' with ticket=instance %}
-                {% if instance|existing_review %}
-                <div class="respond-ticket">
-                    <a class="bouton-ticket" href="{%url 'respond_ticket' instance.id %}">Créer une critique</a>
+                {% if not instance.has_review %}
+                <div class="bloc__btns">
+                    <a class="btn btn--ticket" href="{%url 'respond_ticket' instance.id %}">Créer une critique</a>
                 </div>
                 {% endif %}
             {% endif %}
