--- a/LITReview/reviews/templates/reviews/partials/review_snippet.html
+++ b/LITReview/reviews/templates/reviews/partials/review_snippet.html
@@ -1,29 +1,30 @@
 {% load review_extras %}
-<div class="review-user-date">
-    <div class="review-user">
+<div class="bloc__user-date">
+    <div class="bloc__user">
         <p>
             {% get_poster_display review.user 'review'%}
         </p>
     </div>
-    <div class="review-date">
+    <div class="bloc__date">
         <p>
             {{ review.time_created }}
         </p>
     </div>
 </div>
-<div class="review-headline-rate">
-        <p>{{ review.headline }}&nbsp;- </p>
+<div class="bloc__headline-rate">
+        <h2>{{ review.headline }}&nbsp;  </h2>- 
 
-        <p class='stars-rating'>
+        <p class='bloc__stars'>
             &nbsp;{% get_rating_stars review.rating %}
         </p>
+       
 
 </div>
-<div class="review-body">
+<div>
     <p>
         {{ review.body}}
     </p>
-<div class="review-ticket">
+<div class="review__ticket">
     {% include 'reviews/partials/ticket_snippet.html' with ticket=instance.ticket %}
 </div>
 </div>
