--- a/LITReview/templates/base.html
+++ b/LITReview/templates/base.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static '/css/main.css' %}">
     <title>LITReview</title>
 </head>
-<body>
-    <header>
-        <div class="logo">
-            <img src="{% static 'img/logo.png' %}" alt="logo">
+<body class="base-body">
+    <header id="site_header">
+        <div class="base-logo">
+            <img src="{% static '/img/logo sans texte.png' %}" alt="logo">
+            <h1>LITReview</h1>
         </div>
         <div class="navbar">
             <ul>
@@ -24,7 +25,7 @@
             </ul>
         </div>
     </header>
-    <div class="content">
+    <div class="base-content">
         {% block content %}{% endblock content %}
     </div>
     <footer>
