--- a/LITReview/reviews/templates/reviews/partials/review_snippet.html
+++ b/LITReview/reviews/templates/reviews/partials/review_snippet.html
@@ -12,11 +12,12 @@
     </div>
 </div>
 <div class="bloc__headline-rate">
-        <h2>{{ review.headline }}&nbsp;  </h2>- 
+        <h2>{{ review.headline }}&nbsp;-</h2>
 
         <p class='bloc__stars'>
             &nbsp;{% get_rating_stars review.rating %}
         </p>
+        
        
 
 </div>
