--- a/LITReview/sass/Utils/_variables.scss
+++ b/LITReview/sass/Utils/_variables.scss
@@ -26,3 +26,8 @@ $action-button-bg: black;
 $action-buton-color-font: white;
 
 $logo-font: 'Times sans serif';
+
+$font-medium : 2vw;
+
+$breakpoints: (mobile: 599px, pad: 960px);
+
