--- a/LITReview/reviews/templates/reviews/create_review.html
+++ b/LITReview/reviews/templates/reviews/create_review.html
@@ -2,8 +2,10 @@
 {% block content %}
     <h2>Créer une critique</h2>
     <form class="posting-form" method="post" enctype="multipart/form-data">
+        <div>
+            <h2>Livre/Article:</h2>
         <p>
-            <label for="{{ ticket_form.title.label }}">Title&nbsp;:</label>
+            <label for="{{ ticket_form.title.label }}">Titre&nbsp;:</label>
             <br>
             {{ ticket_form.title }}
         </p>
@@ -13,15 +15,23 @@
             {{ ticket_form.description }}
         </p>
         <p>
-            <label for="{{ticket_form.image.label }}">Image&nbsp;:</label>
+            <label>Image:</label>
             <br>
-            {{ ticket_form.image }}
-              <input type="hidden" name="edit_ticket" value="True" id="id_edit_ticket">
+            <label>
+                <span for="{{ticket_form.image.label}}" class="btn btn--edit">Télécharger</span>
+                {{ ticket_form.image }}
+            </label>
+            {{ form.edit_ticket }}
         </p>
+        </div>
+        <div>
+            <h2>Critique:</h2>
             {{ review_form.as_p }}
             {% csrf_token %}
             <div class="bloc__post">
                 <button type="submit">Publier</button>
             </div>
+        </div>
+
     </form>
 {% endblock content %}
