--- a/LITReview/sass/Layout/_navbar.scss
+++ b/LITReview/sass/Layout/_navbar.scss
@@ -1,16 +1,18 @@
 .navbar{
+
+    font-size: $font-medium;
+
     ul{
         position: relative;
         float:right;
         list-style: none;
         @include flex-row;
         margin-bottom: 10px;
-        margin-right: 10px;
+        margin-right: 1vw;
     }
 
     li{
-        margin-right: 20px;
-        font-size: 0.8em;
+        margin-right: 1vw;
 
         a{
             text-decoration: none;
@@ -22,5 +24,17 @@
             }
         }
     }
+
+    @include pad-only{
+        width: 100%;
+        ul{
+            float: none;
+            @include flex-row(center, space-around);
+            padding-left: 0px;
+        }
+        font-size: calc(1.5*$font-medium);
+
+    }
+
 
 }
