--- a/LITReview/sass/Layout/_subs.scss
+++ b/LITReview/sass/Layout/_subs.scss
@@ -1,7 +1,7 @@
 .flex-row{
     @include flex-row;
-    line-height: 2em;
-    width:80%;
+    line-height: 3vh;
+    width:80vw;
     border: 1px solid black;
 
     &:last-child{
