--- a/LITReview/sass/Pages/_base.scss
+++ b/LITReview/sass/Pages/_base.scss
@@ -4,48 +4,77 @@
     @include flex-column;
     font-family: $site-font-family;
     background-color: $site-color-body;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    width: 98vw;
+
 }
 
-// logo //
 .base-logo{
     position: relative;
-    left: 20px;
+    left: 2vw;
     @include flex-row(center, center);
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 
     img{
-        height: 100px;
-        margin-right: 30px;
+        height: 15vw;
+        max-height: 100px;
+        margin-right: 3vw;
     }
 
     h1{
         font-family: $logo-font;
-        font-size: 4em;
+        font-size: 8vw;
         margin-top: 0px;
         margin-bottom: 0px;
     }
+
+    @include pad-only{
+        width: 90vw;
+        justify-content:center;
+    }
+
+    @include mobile-only{
+        h1{
+            display: none;
+        }
+    }
+
 }
 
-// content //
 .base-content{
     width: 100%;
     @include flex-column(center, space-around);
     background-color: $site-color;
     margin-bottom: 30px;
+
+    h2{
+        font-size: $font-medium;
+    }
+
+    
+    @include pad-only{
+        padding: 0px 0px 0px 0px;
+        @include flex-column(center, None);
+        h2{
+            font-size: calc(1.5*$font-medium);
+      }
+    }
 }
 
-// make_button //
 .create-button-box{
-    width: 100%;
+    width: 85vw;
     margin-top: 20px;
     margin-bottom: 20px;
     @include flex-row(center, space-around);
+
+
 }
 
 .review{
     @include flex-column;
-    @include box(700px, none, $site-color-body, 1px, 8px);
+    @include box(85vw, none, $site-color-body, 1px, 8px);
     padding: 20px 20px 20px 20px;
     margin-bottom: 30px;
     box-shadow: 10px 5px 5px $site-color-body;
@@ -61,11 +90,15 @@
 
 }
 
-// review-user etc...//
 .bloc{
 
     &__user-date{
         @extend %box-display;
+        p{
+            @include mobile-only{
+                font-size: calc(1.3*$font-medium);
+            }
+        }
     }
 
     &__user{
@@ -84,13 +117,16 @@
 
     &__headline-rate{
         @extend %box-display;
+        h2{
+            @include mobile-only{
+                font-size:calc(1.5*$font-medium);
+            }
+        }
 
     }
 
     &__stars{
-        font-size: 2em;
-
-
+        font-size: calc(2*$font-medium);
     }
 
     &__btns{
@@ -100,8 +136,10 @@
     &__cover{
 
         img{
-            height : 350px;
+            max-width: 70vw;
+            max-height : 350px;
             width : auto;
+  
         }
     }
 
@@ -110,7 +148,6 @@
     }  
 }
 
-// make-review //
 .create-review{
     width: 100%;
 }
