--- a/LITReview/static/css/main.css
+++ b/LITReview/static/css/main.css
@@ -36,6 +36,8 @@
   -webkit-box-pack: none;
       -ms-flex-pack: none;
           justify-content: none;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   width: 100%;
 }
 
@@ -60,13 +62,35 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   margin-top: 20px;
   margin-bottom: 30px;
   background-color: white;
   color: black;
-  font-size: 1.5em;
+}
+@media screen and (max-width: 960px) {
+  #site_header {
+    padding: 0px 0px 0px 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: None;
+        -ms-flex-pack: None;
+            justify-content: None;
+  }
 }
 
+.navbar {
+  font-size: 2vw;
+}
 .navbar ul {
   position: relative;
   float: right;
@@ -80,12 +104,13 @@
   -webkit-box-pack: none;
       -ms-flex-pack: none;
           justify-content: none;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   margin-bottom: 10px;
-  margin-right: 10px;
+  margin-right: 1vw;
 }
 .navbar li {
-  margin-right: 20px;
-  font-size: 0.8em;
+  margin-right: 1vw;
 }
 .navbar li a {
   text-decoration: none;
@@ -95,6 +120,26 @@
   border-bottom: 2px solid black;
   padding-bottom: 5px;
 }
+@media screen and (max-width: 960px) {
+  .navbar {
+    width: 100%;
+    font-size: 3vw;
+  }
+  .navbar ul {
+    float: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    padding-left: 0px;
+  }
+}
 
 footer {
   padding: 10px 10px 10px 10px;
@@ -103,7 +148,8 @@ footer {
 }
 
 .posting-form {
-  width: 700px;
+  width: 80vw;
+  max-width: 700px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -122,7 +168,7 @@ footer {
 
 .form-user {
   position: relative;
-  width: 80%;
+  width: 80vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -132,6 +178,9 @@ footer {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  line-height: 3vh;
 }
 .form-user ul {
   display: none;
@@ -146,11 +195,15 @@ footer {
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 .form-user__add {
   background-color: #f1f1f1;
   width: 75%;
-  height: 2em;
+}
+.form-user select {
+  margin-right: 1.5vw;
 }
 
 .flex-row {
@@ -163,8 +216,10 @@ footer {
   -webkit-box-pack: none;
       -ms-flex-pack: none;
           justify-content: none;
-  line-height: 2em;
-  width: 80%;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  line-height: 3vh;
+  width: 80vw;
   border: 1px solid black;
 }
 .flex-row:last-child {
@@ -190,9 +245,10 @@ footer {
 .create-button-link, .create-review__button {
   background-color: black;
   text-decoration: none;
-  width: 300px;
+  width: 40vw;
+  max-width: 300px;
   color: white;
-  font-size: 1em;
+  font-size: 2vw;
   border: solid 1px black;
   border-radius: 10px;
   text-align: center;
@@ -257,8 +313,9 @@ button:hover {
 }
 
 .button-add-user {
-  width: 140px;
-  height: 2em;
+  width: 15vw;
+  line-height: 3vh;
+  font-size: 1.5vw;
 }
 
 .user-unfollow {
@@ -267,7 +324,9 @@ button:hover {
   text-align: center;
   background: red;
   border: 1px solid red;
-  width: 15%;
+  width: 15vw;
+  font-size: 1.5vw;
+  line-height: 3vh;
 }
 .pagination {
   margin-bottom: 10px;
@@ -306,6 +365,8 @@ button:hover {
           align-items: none;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   list-style: none;
 }
 .radio-block label {
@@ -318,6 +379,8 @@ button:hover {
   -webkit-box-pack: none;
       -ms-flex-pack: none;
           justify-content: none;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   font-size: 1.3em;
   height: 100%;
 }
@@ -392,6 +455,8 @@ button:hover {
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   width: 100%;
   padding-bottom: 20px;
 }
@@ -444,6 +509,8 @@ button:hover {
           align-items: none;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   margin-top: 30px;
 }
 
@@ -465,11 +532,14 @@ button:hover {
           justify-content: none;
   font-family: "Inconsolata", monospace;
   background-color: black;
+  padding-left: 1vw;
+  padding-right: 1vw;
+  width: 98vw;
 }
 
 .base-logo {
   position: relative;
-  left: 20px;
+  left: 2vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -479,18 +549,34 @@ button:hover {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
 }
 .base-logo img {
-  height: 100px;
-  margin-right: 30px;
+  height: 15vw;
+  max-height: 100px;
+  margin-right: 3vw;
 }
 .base-logo h1 {
   font-family: "Times sans serif";
-  font-size: 4em;
+  font-size: 8vw;
   margin-top: 0px;
   margin-bottom: 0px;
+}
+@media screen and (max-width: 960px) {
+  .base-logo {
+    width: 90vw;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (max-width: 599px) {
+  .base-logo h1 {
+    display: none;
+  }
 }
 
 .base-content {
@@ -510,9 +596,33 @@ button:hover {
   background-color: white;
   margin-bottom: 30px;
 }
+.base-content h2 {
+  font-size: 2vw;
+}
+@media screen and (max-width: 960px) {
+  .base-content {
+    padding: 0px 0px 0px 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: None;
+        -ms-flex-pack: None;
+            justify-content: None;
+  }
+  .base-content h2 {
+    font-size: 3vw;
+  }
+}
 
 .create-button-box {
-  width: 100%;
+  width: 85vw;
   margin-top: 20px;
   margin-bottom: 20px;
   display: -webkit-box;
@@ -523,6 +633,8 @@ button:hover {
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 
 .review {
@@ -539,7 +651,7 @@ button:hover {
   -webkit-box-pack: none;
       -ms-flex-pack: none;
           justify-content: none;
-  width: 700px;
+  width: 85vw;
   height: none;
   border: solid 1px black;
   border-radius: 8px;
@@ -570,6 +682,11 @@ button:hover {
           box-shadow: 2px 2px 2px black;
 }
 
+@media screen and (max-width: 599px) {
+  .bloc__user-date p {
+    font-size: 2.6vw;
+  }
+}
 .bloc__user {
   width: 50%;
 }
@@ -581,8 +698,13 @@ button:hover {
   position: relative;
   float: right;
 }
+@media screen and (max-width: 599px) {
+  .bloc__headline-rate h2 {
+    font-size: 3vw;
+  }
+}
 .bloc__stars {
-  font-size: 2em;
+  font-size: 4vw;
 }
 .bloc__btns {
   display: -webkit-box;
@@ -594,9 +716,12 @@ button:hover {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: end;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 .bloc__cover img {
-  height: 350px;
+  max-width: 70vw;
+  max-height: 350px;
   width: auto;
 }
 .bloc__post {
@@ -609,6 +734,8 @@ button:hover {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 
 .create-review {
