correction de bug sur migrations

--- a/LITReview/reviews/templates/reviews/create_review.html
+++ b/LITReview/reviews/templates/reviews/create_review.html
@@ -21,7 +21,7 @@
                 <span for="{{ticket_form.image.label}}" class="btn btn--edit">Télécharger</span>
                 {{ ticket_form.image }}
             </label>
-            {{ form.edit_ticket }}
+            {{ ticket_form.edit_ticket }}
         </p>
         </div>
         <div>
